fixed body overflow

--- a/client/src/home.css
+++ b/client/src/home.css
@@ -3,10 +3,21 @@
     font-size: large;
 }
 
+
+
 .home-container {
+
+    padding-top: 25px;
+    padding-bottom: 25px;
+    border-radius: 25px;
+
+}
+
+.membershipCol {
     padding-top: 25px;
 }
 
-.membershipRow {
-    padding: 25px;
+.img-header-row {
+  text-align: center;
+  padding-bottom: 25px;
 }
