--- a/client/src/searchMovies.css
+++ b/client/src/searchMovies.css
@@ -9,12 +9,14 @@ body {
   margin: 0;
   padding: 0;
   font-family: "Roboto", sans-serif;
-  background-image: url("https://wallpaperaccess.com/full/2000044.png");
-  background-repeat: no-repeat; /* Prevent the background image from tiling */
+  background-image: url("https://wallpaperaccess.com/full/2000044.png"); /* Prevent the background image from tiling */
   background-size: cover; /* Cover the entire background */
   background-position: center; /* Center the background image */
   display: flex; /* Keep flexbox layout */
-  min-height: 100vh; /* Set minimum height to 100% of viewport height */
+  min-height: 100vh;
+  width: 100vw; /* Set minimum height to 100% of viewport height */
+  overflow-x: hidden;
+
 }
 
 .container {
